--- a/html/ejemplo1.html
+++ b/html/ejemplo1.html
@@ -16,6 +16,6 @@
 <body>
     <p>
         Ejemplo de acceso a siti wed , previa confirmacion</p>
-        <a href="https://e.plataformaintegra.net/guanenta/index.php" onclick="return confirmarAccesoURL()"> Aceder  a proyecto</a>
+        <a href="https://e.plataformaintegra.net/guanenta/index.php" onclick="confirmarAccesoURL()"> Aceder  a proyecto</a>
 </body>
 </html>
